# Equiflow

./: build.sh  render.yaml
backend/: equiflow.db  requirements.txt  verify_setup.py
backend/app/: analytics.py  auth.py  database.py  engine_wrapper.py  main.py  models.py  schemas.py
backend/app/static/: index.html
core/: CMakeLists.txt  engine.cpp  engine.h  libengine.dylib
mobile/kotlin/com/equiflow/api/: ApiService.kt  AuthInterceptor.kt
mobile/kotlin/com/equiflow/model/: Models.kt
